# advent-2022

day1/: build.sbt
day1/src/main/scala/: Main.scala
haskell/: CHANGELOG.md  day1-hs.cabal
haskell/app/: Main.hs
haskell/puzzles/: Day08.txt
haskell/src/: Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
haskell/test/: Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
scala/day1/: .scalafmt.conf
