cabal-version:      2.4
name:               advent-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jimmy Royer
maintainer:         jimleroyer@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Day2, Day3

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , bytestring
                    , containers
                    , split
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        advent-hs

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite advent-hs-testsuite
  Type:                     exitcode-stdio-1.0
  Main-is:                  Spec.hs
  hs-source-dirs:           test
  Build-depends:            advent-hs
                          , base
                          , hspec
                          , QuickCheck
                          , raw-strings-qq
  build-tool-depends:       hspec-discover:hspec-discover
  default-language: Haskell2010
